@@ -175,8 +175,11 @@ end
 local on_post_entity_died = function(event)
   local unit_number = event.unit_number
   if not unit_number then return end
+  
+  local ghost = event.ghost
+  if not (ghost and ghost.valid) then return end
 
-  local ghost_name = event.ghost.ghost_name
+  local ghost_name = ghost.ghost_name
   local combinator
   if ghost_name == config.CC_NAME then
     combinator = global.cc.data[unit_number]
@@ -188,12 +191,9 @@ local on_post_entity_died = function(event)
   if not combinator then return end
   
   local settings_data = combinator.settings
-  local ghost = event.ghost
-  if (ghost and ghost.valid) then
-    local tags = ghost.tags or {}
-    tags.crafting_combinator_data = {settings = settings_data}
-    ghost.tags = tags
-  end
+  local tags = ghost.tags or {}
+  tags.crafting_combinator_data = {settings = settings_data}
+  ghost.tags = tags
 
   combinator.destroy(unit_number)
 end
